# ha-sberhome

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL.md  README.md  SECURITY.md  USAGE.md  hacs.json  pyproject.toml  requirements_test.txt
.claude/plans/: issue-2-multi-home-ui-filter.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  constraints.txt  hacs.yml  hassfest.yml  release.yml  validate.yml
examples/: README.md  list_devices.py  set_color.py  ws_listen.py
scripts/: bump_version.py
specs/: 2026-05-13-light-effects-and-groups-design.md
tests/: conftest.py  test_api.py  test_auth_state.py  test_auth_view.py  test_binary_sensor.py  test_binary_sensor_extra.py  test_binary_sensor_online.py  test_button.py  test_climate.py  test_command_tracker.py  test_config_flow.py  test_conflict.py  test_coordinator.py  test_coordinator_client.py  test_cover.py  test_diagnose.py  test_diagnostics.py  test_discovery.py  test_entity.py  test_event.py  test_fan.py  test_ha_token_store.py  test_home_api.py  test_humidifier.py  test_indicator_light.py  test_init.py  test_light.py  test_light_color_modes.py  test_light_effects.py  test_media_player.py  test_notify.py  test_number.py  test_replay_inject.py  test_scenarios.py  test_schema_validator.py  test_select.py  test_select_enum_fallback.py  test_sensor.py  test_sensor_hvac.py  test_state_diff.py  (+17 more)
tools/: audit_coverage.py  generate_constants.py
(+262 files in other folders)
