[project]
name = "ha-sberhome"
version = "5.8.4"
description = "Home Assistant integration for Sber smart home (Салют)"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

# setuptools auto-discovery находит и `specs/` (committed v5.4.0 design doc),
# и `custom_components/` как top-level пакеты — flat-layout конфликт. Явно
# говорим что наш пакет один.
[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=custom_components/sberhome --cov-report=term-missing"

[tool.coverage.run]
source = ["custom_components/sberhome"]
omit = ["custom_components/sberhome/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# В тестовых файлах допускаем длинные строки (длинные JSON payloads читаются лучше
# на одной строке) и неиспользуемые локальные переменные (часто result = await ...
# нужен только для таймингов или явного await'а).
"tests/**/*.py" = ["E501", "F841"]
